Update Tomcat, XSDs, Small code improvements and fix typos (#6475)
* Update FrankConfig XSDs
* Small code improvements
* Less deprecations usage
* Fix typos
* Upgrade Tomcat